--- a/views/punch.css
+++ b/views/punch.css
@@ -3,7 +3,7 @@
   margin: 0px;
   background-color: #f5f5f5;
 }
-.logo-container {
+.logoContainer {
   background-color: #faec4b;
   text-align: center;
 }
@@ -15,18 +15,18 @@
   cursor: pointer;
   padding: 18px;
   border: none;
-  text-align: left;
   outline: none;
   font-size: 15px;
   transition: 0.4s;
   display: flex;
 }
-.icon-for-info {
-  height: 30px;
-  width: 30px;
+.iconForInfo {
+  height: 40px;
+  width: 40px;
 }
-.info-caption {
-  padding: 5px;
+.infoCaption {
+  padding-left: 5px;
+  padding-top: 10px;
 }
 table {
   display: flex;
@@ -38,43 +38,42 @@ table {
 th,
 td {
   border: 1px solid #000000;
-  width: 100px;
+  width: 120px;
   text-align: center;
 }
 .panel {
-  padding: 0 18px;
   display: none;
+  text-align: center;
+  flex-direction: row;
+  justify-content: center;
   background-color: #f5f5f5;
 }
-.employee-history {
-  margin-left: 50px;
-  padding-left: 85px;
+.employeeHistory {
   color: #900c3f;
 }
-.container-element {
+.containerElement {
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin-top: 50px;
 }
-.form-control {
-  width: 200px;
+.formControl {
+  width: 350px;
   padding: 5px;
   border-radius: 5px;
-  border-width: 1px;
+  border-width: 2px;
   margin-top: 5px;
   margin-bottom: 15px;
+  border: 1px solid #000000;
 }
-.form-control:hover {
-  border: 2px solid #900c3f;
-}
-.btn {
+.punchButton {
+  color: black;
   font-weight: 500;
   font-size: 14px;
   height: 100px;
   width: 100px;
   margin-top: 60px;
-  margin-left: 50px;
+  margin-left: 130px;
   box-shadow: -20px -20px 25px rgba(255, 255, 255, 0.5),
     20px 20px 25px rgba(70, 70, 70, 0.12);
   border-radius: 50%;
@@ -82,31 +81,19 @@ td {
   outline: none;
   cursor: pointer;
 }
-.btn:hover {
-  color: #900c3f;
-  height: 100px;
-  width: 100px;
-  margin-top: 50px;
-  margin-left: 50px;
-  box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.5),
-    10px 10px 15px rgba(70, 70, 70, 0.12),
-    inset -10px -10px 15px rgba(255, 255, 255, 0.5),
-    inset 10px 10px 15px rgba(70, 70, 70, 0.12);
-  border-radius: 50%;
-  border: 2px solid #ececec;
-  outline: none;
-}
 .loader {
   border: 2px solid #f3f3f3;
-  border-radius: 50%;
+  border-radius: 100px;
   border-top: 2px solid #900c3f;
   background-color: #f3f3f3;
   width: 100px;
   height: 100px;
-  -webkit-animation: spin 2s linear infinite; /* Safari */
+  -webkit-animation: spin 2s linear infinite; /*Safari */
   animation: spin 2s linear infinite;
-  margin-top: 188px;
-  margin-left: -150px;
+  -moz-animation: spin 2s linear infinite;
+  -o-animation: spin 2s linear infinite;
+  margin-top: 187px;
+  margin-left: -218px;
 }
 /* Safari */
 @-webkit-keyframes spin {
@@ -115,6 +102,22 @@ td {
   }
   100% {
     -webkit-transform: rotate(360deg);
+  }
+}
+@-moz-keyframes spin {
+  0% {
+    -moz-transform: rotate(0deg);
+  }
+  100% {
+    -moz-transform: rotate(360deg);
+  }
+}
+@-o-keyframes spin {
+  0% {
+    -o-transform: rotate(0deg);
+  }
+  100% {
+    -o-transform: rotate(360deg);
   }
 }
 
@@ -127,7 +130,7 @@ td {
   }
 }
 /* Error-page-css */
-.error-text-container {
+.errorTextContainer {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -135,33 +138,33 @@ td {
   color: #900c3f;
 }
 /* history-page-css */
-.logo-navigation {
+.logoNavigation {
   cursor: pointer;
 }
-.history-page-container {
+.historyPageContainer {
   padding-top: 70px;
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
-.historypage-form-input-elements {
-  width: 200px;
+.historypageFormInputElements {
+  width: 250px;
   border-radius: 3px;
   border: 1px solid;
   padding: 10px;
   margin-bottom: 20px;
   font-size: 16px;
 }
-.historypage-form-input-elements:hover {
+.historypageFormInputElements:hover {
   border: 2px solid #900c3f;
 }
-.db-results-container {
+.dbResultsContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-top: 30px;
 }
-.recard-details-caption {
+.recardDetailsCaption {
   padding-top: 20px;
   text-decoration: underline;
   color: #900c3f;
@@ -169,18 +172,16 @@ td {
   flex-direction: row;
   justify-content: center;
 }
-.historypage-submit-btn {
+.historypageSubmitBtn {
   margin-top: 20px;
   width: 100px;
   border-radius: 5px;
   border: 1px solid;
   padding: 10px;
-  margin-left: 50px;
+  margin-left: 75px;
   cursor: pointer;
-}
-.historypage-submit-btn:hover {
   background-color: #900c3f;
-  color: #f3f3f3;
+  color: #ffffff;
 }
 .errorImageForAdmin {
   height: 200px;
