--- a/views/punchIn.pug
+++ b/views/punchIn.pug
@@ -13,42 +13,44 @@ html
 		button(class="accordion")
 			img(src="./public/images/icon.png" class="iconForInfo")
 			p(class="infoCaption") Click the Icon for ID's
-		div(class="panel")
-			table
-				tr
-					th ID
-					th Name
-				tr
-					td 000
-					td Priyank
-				tr
-					td 001
-					td Chetna
-				tr
-					td 002
-					td Vinay
-				tr
-					td 003
-					td Sridhar
-				tr
-					td 004
-					td Nikunj
-				tr
-					td 005
-					td Jayanth
-				tr
-					td 006
-					td Avantika
-				tr
-					td 007
-					td Harsh
-				tr
-					td 008
-					td Omprakash
-				tr
-					td 009
-					td Thejasri
-			a(href="/admin", class="employeeHistory" id="emp-history") Admin
+		div(class="tableContainer")
+			div(class="tableDiv")
+				table(class="table")
+					tr
+						th ID
+						th Name
+					tr
+						td 000
+						td Priyank
+					tr
+						td 001
+						td Chetna
+					tr
+						td 002
+						td Vinay
+					tr
+						td 003
+						td Sridhar
+					tr
+						td 004
+						td Nikunj
+					tr
+						td 005
+						td Jayanth
+					tr
+						td 006
+						td Avantika
+					tr
+						td 007
+						td Harsh
+					tr
+						td 008
+						td Omprakash
+					tr
+						td 009
+						td Thejasri
+			div(class="adminText")
+				a(href="/admin", class="employeeHistory" id="emp-history") Admin
 		div(class="containerElement")
 			form#formSubmit(action="/" method="POST")
 				label(for="idField") Enter The ID :
@@ -74,5 +76,5 @@ html
 		input(
   		type='hidden'
   		value=app_env id="app_env")
-		script
-			include punchIn.js
+	script
+		include punchIn.js
