--- a/views/punch.css
+++ b/views/punch.css
@@ -1,9 +1,13 @@
 * {
   font-family: "Roboto";
-  margin: 0px;
   background-color: #f5f5f5;
+  margin: 0px;
 }
-.logo-container {
+body,
+html {
+  height: 100%;
+}
+.logoContainer {
   background-color: #faec4b;
   text-align: center;
 }
@@ -15,110 +19,99 @@
   cursor: pointer;
   padding: 18px;
   border: none;
-  text-align: left;
   outline: none;
   font-size: 15px;
   transition: 0.4s;
   display: flex;
 }
-.icon-for-info {
-  height: 30px;
-  width: 30px;
+.iconForInfo {
+  height: 40px;
+  width: 40px;
 }
-.info-caption {
-  padding: 5px;
+.infoCaption {
+  padding: 8px;
 }
-table {
+.tableContainer {
+  display: none;
+}
+.tableDiv {
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  border-collapse: collapse;
-  padding-bottom: 10px;
 }
-th,
+.tableDiv th,
 td {
-  border: 1px solid #000000;
-  width: 100px;
+  border: 1px solid;
+}
+.table {
+  border: 1px solid;
+  border-collapse: collapse;
+}
+.adminText {
   text-align: center;
 }
-.panel {
-  padding: 0 18px;
-  display: none;
-  background-color: #f5f5f5;
-}
-.employee-history {
-  margin-left: 50px;
-  padding-left: 85px;
+.employeeHistory {
   color: #900c3f;
 }
-.container-element {
+.containerElement {
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin-top: 50px;
 }
-.form-control {
-  width: 200px;
+.formControl {
+  width: 300px;
   padding: 5px;
   border-radius: 5px;
-  border-width: 1px;
+  border-width: 2px;
   margin-top: 5px;
   margin-bottom: 15px;
+  border: 1px solid #000000;
+  padding: 10px;
+  color: #000000;
 }
-.form-control:hover {
-  border: 2px solid #900c3f;
-}
-.btn {
+.punchButton {
+  color: #900c3f;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 16px;
   height: 100px;
   width: 100px;
-  margin-top: 60px;
-  margin-left: 50px;
+  position: relative;
+  left: 100px;
+  top: 45px;
   box-shadow: -20px -20px 25px rgba(255, 255, 255, 0.5),
     20px 20px 25px rgba(70, 70, 70, 0.12);
-  border-radius: 50%;
+  border-radius: 50px;
   border: 1px solid #ececec;
   outline: none;
   cursor: pointer;
 }
-.btn:hover {
-  color: #900c3f;
-  height: 100px;
-  width: 100px;
-  margin-top: 50px;
-  margin-left: 50px;
-  box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.5),
-    10px 10px 15px rgba(70, 70, 70, 0.12),
-    inset -10px -10px 15px rgba(255, 255, 255, 0.5),
-    inset 10px 10px 15px rgba(70, 70, 70, 0.12);
-  border-radius: 50%;
-  border: 2px solid #ececec;
-  outline: none;
-}
 .loader {
-  border: 2px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 2px solid #900c3f;
-  background-color: #f3f3f3;
+  position: absolute;
+  left: 200px;
+  top: 450px;
+  transform: translate(-50%, -50%);
   width: 100px;
   height: 100px;
-  -webkit-animation: spin 2s linear infinite; /* Safari */
-  animation: spin 2s linear infinite;
-  margin-top: 188px;
-  margin-left: -150px;
+  background: transparent;
+  border: 3px solid #3c3c3c;
+  border-radius: 50%;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  background-color: #ffffff;
 }
-/* Safari */
-@-webkit-keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-  }
+.loader:before {
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: -3px;
+  width: 100px;
+  height: 100px;
+  border: 3px solid transparent;
+  border-top: 3px solid #fff000;
+  border-right: 3px solid #fff000;
+  border-radius: 100px;
+  animation: animateC 2s linear infinite;
 }
-
-@keyframes spin {
+@keyframes animateC {
   0% {
     transform: rotate(0deg);
   }
@@ -126,68 +119,52 @@ td {
     transform: rotate(360deg);
   }
 }
+@keyframes animate {
+  0% {
+    transform: rotate(45deg);
+  }
+  100% {
+    transform: rotate(405deg);
+  }
+}
 /* Error-page-css */
-.error-text-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin-top: 100px;
+.errorTextContainer {
+  text-align: center;
   color: #900c3f;
 }
-/* history-page-css */
-.logo-navigation {
+/* Admin-page-css */
+.logoNavigation {
   cursor: pointer;
 }
-.history-page-container {
+.historyPageContainer {
   padding-top: 70px;
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
-.historypage-form-input-elements {
-  width: 200px;
+.historypageFormInputElements {
+  width: 250px;
   border-radius: 3px;
   border: 1px solid;
   padding: 10px;
   margin-bottom: 20px;
   font-size: 16px;
 }
-.historypage-form-input-elements:hover {
-  border: 2px solid #900c3f;
+.dbResultsContainer {
+  text-align: center;
 }
-.db-results-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 30px;
-}
-.recard-details-caption {
-  padding-top: 20px;
+.recardDetailsCaption {
   text-decoration: underline;
   color: #900c3f;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+  text-align: center;
 }
-.historypage-submit-btn {
-  margin-top: 20px;
+.historypageSubmitBtn {
   width: 100px;
-  border-radius: 5px;
-  border: 1px solid;
+  position: relative;
+  left: 85px;
   padding: 10px;
-  margin-left: 50px;
+  border: 0px;
   cursor: pointer;
-}
-.historypage-submit-btn:hover {
   background-color: #900c3f;
-  color: #f3f3f3;
-}
-.errorImageForAdmin {
-  height: 200px;
-  width: 350px;
-  opacity: 0.2;
-  margin-top: -100px;
-}
-.errorMsg {
-  color: #f00713;
+  color: #ffffff;
 }
