--- a/views/punchIn.pug
+++ b/views/punchIn.pug
@@ -1,18 +1,21 @@
 html
 	head
 		title= title
+		link(rel="shortcut icon" type="image/png" href="./public/images/tjsLogo.png")
 		link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-notify@0.5.5/dist/simple-notify.min.css")
 		script(src="https://cdn.jsdelivr.net/npm/simple-notify@0.5.5/dist/simple-notify.min.js")
+		meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1")
 		style
 			include ./punch.css
 	body
-		div(class="logo-container")
+		div(class="logoContainer")
 			img(src="./public/images/banner.png" class="logo")
 		button(class="accordion")
-			img(src="./public/images/icon.png" class="icon-for-info")
-			p(class="info-caption") Click the Icon for ID's
-		div(class="panel")
-				table
+			img(src="./public/images/icon.png" class="iconForInfo")
+			p(class="infoCaption") Click the Icon for ID's
+		div(class="tableContainer")
+			div(class="tableDiv")
+				table(class="table")
 					tr
 						th ID
 						th Name
@@ -46,8 +49,9 @@ html
 					tr
 						td 009
 						td Thejasri
-				a(href="/admin", class="employee-history" id="emp-history") Admin
-		div(class="container-element")
+			div(class="adminText")
+				a(href="/admin", class="employeeHistory" id="emp-history") Admin
+		div(class="containerElement")
 			form#formSubmit(action="/" method="POST")
 				label(for="idField") Enter The ID :
 				br
@@ -59,18 +63,18 @@ html
   				name='long',value="" id="long")
 				input(
   				type='text'
-  				name='id',value="" id="inputId" placeholder="Id" class="form-control")
+  				name='id',value="" id="inputId" placeholder="Id" class="formControl")
 				br
 				label(for="parseKeyField") Enter The Pass Key :
 				br
 				input(
   				type='password'
-  				name='passkey',value="" id="passKeyId" placeholder="Pass Key" class="form-control")
+  				name='passkey',value="" id="passKeyId" placeholder="Pass Key" class="formControl")
 				br
-				button(type="submit" id="formId" class="btn")
+				button(type="submit" id="formId" class="punchButton")
 			div(id="loader")
 		input(
   		type='hidden'
   		value=app_env id="app_env")
-		script
-			include punchIn.js
+	script
+		include punchIn.js
